--- a/templates/dashboards/admin_dashboard.html
+++ b/templates/dashboards/admin_dashboard.html
@@ -254,7 +254,7 @@
   <h4 style="font-weight:700;color:#2d3748; margin:0;">Daily Employee Performance (Product-wise)</h4>
   <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#dailyPerf" aria-expanded="false" aria-controls="dailyPerf">Toggle</button>
 </div>
-<div class="collapse show" id="dailyPerf">
+<div class="collapse" id="dailyPerf">
   <div class="row" style="display:flex;flex-wrap:wrap;gap:1rem;">
     {% for row in daily_employee_product %}
       <div class="col-md-4" style="flex:1 1 260px;min-width:240px;">
