--- a/templates/clients/add_client.html
+++ b/templates/clients/add_client.html
@@ -110,6 +110,10 @@
         <input type="number" step="0.01" name="sip_amount" value="{{ form.sip_amount.value|default_if_none:'' }}" class="form-control">
       </div>
       <div class="col-md-4">
+        <label class="form-label">Lumsum Investment</label>
+        <input type="number" step="0.01" name="lumsum_investment" value="{{ form.lumsum_investment.value|default_if_none:'0' }}" class="form-control" placeholder="0">
+      </div>
+      <div class="col-md-4">
         <label class="form-label">PMS Amount</label>
         <input type="number" step="0.01" name="pms_amount" value="{{ form.pms_amount.value|default_if_none:'' }}" class="form-control">
       </div>
